# fastrecon

./: .gitignore  LICENSE  PKG-INFO  README.md  mkdocs.yml  pyproject.toml
benchmarks/: README.md  __init__.py  bench.py  ci_spread_summary.py  conftest.py  datasets.py  harness.py  result.py  run_matrix.py  setup_envs.sh  test_benchmarks.py
benchmarks/adapters/: __init__.py  _base.py  datacompy_adapter.py  datadiff_adapter.py  duckdb_sql_adapter.py  fastrecon_adapter.py  pandas_merge_adapter.py  polars_adapter.py  pyspark_adapter.py
benchmarks/dashboard/: README.md  build_index.py  index.html
benchmarks/dashboard/history/: index.json
benchmarks/data/: all_match_10000_ground_truth.json  all_match_10000_right.parquet  large_mismatch_10000_ground_truth.json  large_mismatch_10000_right.parquet  precision_diff_10000_ground_truth.json  precision_diff_10000_right.parquet  small_mismatch_10000_ground_truth.json  small_mismatch_10000_left.parquet  small_mismatch_10000_right.parquet  small_mismatch_5000_ground_truth.json  small_mismatch_5000_left.parquet  small_mismatch_5000_right.parquet
benchmarks/results/: reference.md  smoke.json  smoke.md
docs/: api-reference.md  benchmarks.md  cli.md  cloud-storage.md  compare-modes.md  configuration.md  databases.md  files.md  getting-started.md  index.md  recipes.md
examples/: basic_csv_compare.py  partitioned_compare.py  sql_vs_parquet.py
examples/data/: orders_left.csv  orders_right.csv
site/benchmarks/: index.html
src/fastrecon/: __init__.py  api.py  cli.py  config.py  exceptions.py  types.py
src/fastrecon/compare/: __init__.py  hash_compare.py  keyed_compare.py  partitioned_compare.py  profile_compare.py  rowcount_compare.py  schema_compare.py
src/fastrecon/engines/: __init__.py  duckdb_engine.py
src/fastrecon/output/: __init__.py  csv_report.py  html_report.py  junit_report.py  result.py  text_report.py
src/fastrecon/sources/: __init__.py  _sql_loader.py  auto.py  avro_file.py  base.py  csv_file.py  excel_file.py  fixed_width_file.py  jdbc_query.py  json_file.py  mainframe_file.py  odbc_query.py  orc_file.py  parquet_file.py  postgres_scanner.py  sql_query.py  sql_table.py  xml_file.py
src/fastrecon/utils/: logging.py  normalization.py  type_inference.py
tests/: conftest.py  test_benchmarks_harness.py  test_csv_vs_csv.py  test_dtype_mismatch.py  test_fast_path.py  test_hash_compare.py  test_logical_type_inference.py  test_new_file_sources.py  test_new_modes.py  test_new_sources.py  test_parquet_vs_query.py  test_partitioned.py  test_postgres_integration.py  test_postgres_scanner.py  test_reports_and_cli.py  test_reports_extended.py  test_sql_vs_csv.py  test_streaming_loader.py  test_streaming_opt_out.py
